Refactor demo item names for clarity and remove "All Items" category. Update dynamic item creation to ensure consistent naming convention based on existing items in each category.

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,9 +37,6 @@
           <div class="focusable category-item" tabindex="0" data-focus-parent="tall-items">
             Tall Items
           </div>
-          <div class="focusable category-item" tabindex="0" data-focus-parent="all-items">
-            All Items
-          </div>
         </div>
       </div>
 
@@ -48,68 +45,68 @@
         <!-- Small blocks -->
         <div class="category-group" data-category="small">
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 2 (S)
+            Small Item 1
           </div>
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 4 (S)
+            Small Item 2
           </div>
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 8 (S)
+            Small Item 3
           </div>
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 10 (S)
+            Small Item 4
           </div>
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 13 (S)
+            Small Item 5
           </div>
           <div class="focusable item-small" tabindex="0" data-focus-child-of="small-items">
-            Block 16 (S)
+            Small Item 6
           </div>
         </div>
 
         <!-- Medium blocks -->
         <div class="category-group" data-category="medium">
           <div class="focusable item-medium" tabindex="0" data-focus-child-of="medium-items">
-            Block 1 (M)
+            Medium Item 1
           </div>
           <div class="focusable item-medium" tabindex="0" data-focus-child-of="medium-items">
-            Block 6 (M)
+            Medium Item 2
           </div>
           <div class="focusable item-medium" tabindex="0" data-focus-child-of="medium-items">
-            Block 9 (M)
+            Medium Item 3
           </div>
           <div class="focusable item-medium" tabindex="0" data-focus-child-of="medium-items">
-            Block 12 (M)
+            Medium Item 4
           </div>
           <div class="focusable item-medium" tabindex="0" data-focus-child-of="medium-items">
-            Block 14 (M)
+            Medium Item 5
           </div>
         </div>
 
         <!-- Large blocks -->
         <div class="category-group" data-category="large">
           <div class="focusable item-large" tabindex="0" data-focus-child-of="large-items">
-            Block 3 (L)
+            Large Item 1
           </div>
           <div class="focusable item-large" tabindex="0" data-focus-child-of="large-items">
-            Block 11 (L)
+            Large Item 2
           </div>
         </div>
 
         <!-- Wide blocks -->
         <div class="category-group" data-category="wide">
           <div class="focusable item-wide" tabindex="0" data-focus-child-of="wide-items">
-            Wide Block 5 (W)
+            Wide Item 1
           </div>
           <div class="focusable item-wide" tabindex="0" data-focus-child-of="wide-items">
-            Another Wide 15 (W)
+            Wide Item 2
           </div>
         </div>
 
         <!-- Tall blocks -->
         <div class="category-group" data-category="tall">
           <div class="focusable item-tall" tabindex="0" data-focus-child-of="tall-items">
-            Tall Block 7 (T)
+            Tall Item 1
           </div>
         </div>
       </div>
