Enhance FocusEngine with parent position support, allowing navigation direction to be configured as 'left' or 'right'. Update README.md to document new options, and modify demo to include a dropdown for selecting parent position. Adjust CSS for layout changes based on parent-child relationships.

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,10 @@
         <button id="add-element" class="control-button">Add New Element</button>
         <button id="destroy-engine" class="control-button">Destroy Engine</button>
         <button id="reinit-engine" class="control-button">Reinitialize Engine</button>
+        <select id="parent-position" class="control-select">
+          <option value="left">Parents Left</option>
+          <option value="right">Parents Right</option>
+        </select>
       </div>
     </div>
 
