Update version to 0.0.5 and modify demo dropdown options for clarity, changing 'Parents' to 'Categories' for improved user understanding.

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,8 +15,8 @@
         <button id="destroy-engine" class="control-button">Destroy Engine</button>
         <button id="reinit-engine" class="control-button">Reinitialize Engine</button>
         <select id="parent-position" class="control-select">
-          <option value="left">Parents Left</option>
-          <option value="right">Parents Right</option>
+          <option value="left">Categories Left</option>
+          <option value="right">Categories Right</option>
         </select>
       </div>
     </div>
