Update version to 0.0.6, add TV remote control simulation to demo, and implement corresponding styles and functionality in FocusEngine for improved navigation experience.

--- a/demo/index.html
+++ b/demo/index.html
@@ -116,6 +116,23 @@
       </div>
     </div>
 
+    <!-- TV Remote Control Simulation -->
+    <div class="remote-control-wrapper">
+      <div class="remote-control">
+        <div class="remote-header">TV Remote</div>
+        <div class="remote-nav-section">
+          <button id="remote-up" class="remote-btn remote-nav-btn">▲</button>
+          <div class="remote-nav-row">
+            <button id="remote-left" class="remote-btn remote-nav-btn">◀</button>
+            <button id="remote-ok" class="remote-btn remote-ok-btn">OK</button>
+            <button id="remote-right" class="remote-btn remote-nav-btn">▶</button>
+          </div>
+          <button id="remote-down" class="remote-btn remote-nav-btn">▼</button>
+        </div>
+        <button id="remote-back" class="remote-btn remote-action-btn">Back</button>
+      </div>
+    </div>
+
     <div class="footer">
       <div id="log" class="log-panel">
         <h3>Event Log</h3>
